<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.yandex.general</groupId>
    <artifactId>general-tests</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <modules>
        <module>general-web-client</module>
        <module>general-web-tests</module>
        <module>general-mobile-tests</module>
    </modules>

    <properties>
        <java.version>1.8</java.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <ashot.version>1.5.3</ashot.version>
        <allure.version>2.9.0</allure.version>
        <aspectj.version>1.9.1</aspectj.version>
        <guice.version>4.1.0</guice.version>
        <hamcrest.version>1.3</hamcrest.version>
        <log4j.version>1.2.17</log4j.version>
        <gson.version>2.7</gson.version>
        <junit.version>4.12</junit.version>
        <restassured.version>3.1.0</restassured.version>
        <selenium.version>3.141.59</selenium.version>
        <browsermob-core.version>2.1.5</browsermob-core.version>

        <!--default-->
        <parallel.strategy>classesAndMethods</parallel.strategy>
        <thread.count>1</thread.count>
        <fork.count>1</fork.count>
        <gson-fire-version>1.8.2</gson-fire-version>
        <okio-version>1.13.0</okio-version>
        <retrofit-version>2.3.0</retrofit-version>
        <commons.lang>2.6</commons.lang>
        <json-unit.version>2.5.0</json-unit.version>
        <commons.version>1.2-SNAPSHOT</commons.version>

    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ru.yandex.general</groupId>
                <artifactId>general-web-client</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Allure -->
            <dependency>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-java-commons</artifactId>
                <version>${allure.version}</version>
            </dependency>
            <dependency>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-junit4</artifactId>
                <version>${allure.version}</version>
            </dependency>
            <dependency>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-assertj</artifactId>
                <version>${allure.version}</version>
            </dependency>
            <dependency>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-okhttp3</artifactId>
                <version>${allure.version}</version>
            </dependency>

            <!-- AspectJ -->
            <dependency>
                <groupId>org.aspectj</groupId>
                <artifactId>aspectjrt</artifactId>
                <version>${aspectj.version}</version>
            </dependency>
            <dependency>
                <groupId>org.aspectj</groupId>
                <artifactId>aspectjweaver</artifactId>
                <version>${aspectj.version}</version>
            </dependency>

            <!-- Other -->
            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.aeonbits.owner</groupId>
                <artifactId>owner-java8</artifactId>
                <version>1.0.9</version>
            </dependency>
            <dependency>
                <groupId>javax.ws.rs</groupId>
                <artifactId>javax.ws.rs-api</artifactId>
                <version>2.1.1</version>
            </dependency>
            <dependency>
                <groupId>io.rest-assured</groupId>
                <artifactId>rest-assured</artifactId>
                <version>${restassured.version}</version>
            </dependency>
            <dependency>
                <groupId>io.rest-assured</groupId>
                <artifactId>json-schema-validator</artifactId>
                <version>${restassured.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.inject</groupId>
                <artifactId>guice</artifactId>
                <version>${guice.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.inject.extensions</groupId>
                <artifactId>guice-multibindings</artifactId>
                <version>${guice.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-all</artifactId>
                <version>${hamcrest.version}</version>
            </dependency>
            <dependency>
                <groupId>io.qameta.atlas</groupId>
                <artifactId>atlas-webdriver</artifactId>
                <version>1.8.0</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>net.javacrumbs.json-unit</groupId>
                <artifactId>json-unit</artifactId>
                <version>${json-unit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpcore</artifactId>
                <version>4.4.4</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>4.5.2</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.retrofit2</groupId>
                <artifactId>retrofit</artifactId>
                <version>${retrofit-version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>logging-interceptor</artifactId>
                <version>3.8.0</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.retrofit2</groupId>
                <artifactId>converter-gson</artifactId>
                <version>${retrofit-version}</version>
            </dependency>
            <dependency>
                <groupId>io.gsonfire</groupId>
                <artifactId>gson-fire</artifactId>
                <version>${gson-fire-version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okio</groupId>
                <artifactId>okio</artifactId>
                <version>${okio-version}</version>
            </dependency>
            <dependency>
                <groupId>org.seleniumhq.selenium</groupId>
                <artifactId>selenium-java</artifactId>
                <version>${selenium.version}</version>
            </dependency>
            <dependency>
                <groupId>org.seleniumhq.selenium</groupId>
                <artifactId>selenium-api</artifactId>
                <version>${selenium.version}</version>
            </dependency>
            <dependency>
                <groupId>org.seleniumhq.selenium</groupId>
                <artifactId>selenium-remote-driver</artifactId>
                <version>${selenium.version}</version>
            </dependency>
            <dependency>
                <groupId>net.lightbody.bmp</groupId>
                <artifactId>browsermob-core</artifactId>
                <version>${browsermob-core.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.16.12</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>1.12.1</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>1.7.29</version>
            </dependency>
            <dependency>
                <groupId>ru.lanwen.diff</groupId>
                <artifactId>uri-differ-lib</artifactId>
                <version>1.3.0</version>
            </dependency>
            <dependency>
                <groupId>ru.yandex.autotests.irt</groupId>
                <artifactId>test-utils</artifactId>
                <version>1.2-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>ru.yandex.qatools.htmlelements</groupId>
                <artifactId>htmlelements-all</artifactId>
                <version>1.17</version>
                <exclusions>
                    <exclusion>
                        <groupId>ru.yandex.qatools.htmlelements</groupId>
                        <artifactId>htmlelements-thucydides</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <!--https://github.com/awaitility/awaitility-->
            <dependency>
                <groupId>org.awaitility</groupId>
                <artifactId>awaitility</artifactId>
                <version>3.1.6</version>
            </dependency>
            <!--Commons-->
            <dependency>
                <groupId>ru.vertis.tests</groupId>
                <artifactId>commons-ra</artifactId>
                <version>${commons.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>io.qameta.allure</groupId>
                        <artifactId>allure-junit4-aspect</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.qameta.allure</groupId>
                        <artifactId>allure-java-migration</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>ru.vertis.tests</groupId>
                <artifactId>commons</artifactId>
                <version>${commons.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>io.qameta.allure</groupId>
                        <artifactId>allure-junit4-aspect</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.qameta.allure</groupId>
                        <artifactId>allure-java-migration</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>ru.vertis.tests</groupId>
                <artifactId>guice-junit</artifactId>
                <version>${commons.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.vertis.tests</groupId>
                <artifactId>guice-webdriver</artifactId>
                <version>${commons.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>io.qameta.allure</groupId>
                        <artifactId>allure-junit4-aspect</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.qameta.allure</groupId>
                        <artifactId>allure-java-migration</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>ru.vertis.tests</groupId>
                <artifactId>passport-yandex</artifactId>
                <version>${commons.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.yandex.qatools.htmlelements</groupId>
                <artifactId>htmlelements-matchers</artifactId>
                <version>1.17</version>
            </dependency>
            <dependency>
                <groupId>commons-lang</groupId>
                <artifactId>commons-lang</artifactId>
                <version>${commons.lang}</version>
            </dependency>
            <dependency>
                <groupId>net.javacrumbs.json-unit</groupId>
                <artifactId>json-unit-assertj</artifactId>
                <version>${json-unit.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.yandex.qatools.ashot</groupId>
                <artifactId>ashot</artifactId>
                <version>${ashot.version}</version>
            </dependency>
        </dependencies>

    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.qameta.allure</groupId>
                    <artifactId>allure-maven</artifactId>
                    <version>2.8</version>
                    <configuration>
                        <reportVersion>${allure.version}</reportVersion>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.20.1</version>
                    <configuration>
                        <argLine>
                            <!--http://stackoverflow.com/questions/25163853/allure-framework-using-step-and-attachment-annotations-with-testng-and-maven-->
                            -Xms256m -Xmx6g -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC
                            -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
                        </argLine>
                        <useSystemClassLoader>false</useSystemClassLoader>
                        <groups>${groups}</groups>
                        <excludedGroups>${excluded.groups}</excludedGroups>
                        <includes>
                            <include>${include.packages}</include>
                        </includes>
                        <excludes>
                            <exclude>${exclude.packages}</exclude>
                        </excludes>
                        <properties>
                            <property>
                                <name>listener</name>
                                <value>io.qameta.allure.junit4.AllureJunit4</value>
                            </property>
                        </properties>
                        <systemProperties>
                            <property>
                                <name>allure.results.directory</name>
                                <value>${project.build.directory}/allure-results</value>
                            </property>
                        </systemProperties>

                        <parallel>${parallel.strategy}</parallel>
                        <threadCountClasses>1</threadCountClasses>
                        <threadCountMethods>1</threadCountMethods>

                        <forkCount>${fork.count}</forkCount>
                        <reuseForks>false</reuseForks>

                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.aspectj</groupId>
                            <artifactId>aspectjweaver</artifactId>
                            <version>${aspectj.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.assertj</groupId>
                    <artifactId>assertj-assertions-generator-maven-plugin</artifactId>
                    <version>2.0.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>


</project>